hubSide/force-app/main/default/objects/Stock_produit__c/Stock_produit__c.object-meta.xml
<CustomObject>
    <label>Stock magasin</label>
    <nameField>
        <label>Stock magasin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stocks magasin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>