hubSide/force-app/main/default/objects/Stock_produit__c/fields/Code_distributeur_initial__c.field-meta.xml
<CustomField>
    <fullName>Code_distributeur_initial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code distributeur initial</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Stock_produits_DistribInitial</relationshipName>
    <type>Lookup</type>
</CustomField>