hubSide/force-app/main/default/objects/Stock_produit__c/fields/Date_entree__c.field-meta.xml
<CustomField>
    <fullName>Date_entree__c</fullName>
    <inlineHelpText>Date d’entrée dans la boutique par le vendeur ou lors d’un retour transfert</inlineHelpText>
    <label>Date d&apos;entree</label>
    <required>true</required>
    <type>Date</type>
</CustomField>