hubSide/force-app/main/default/objects/Stock_produit__c/fields/Date_retour__c.field-meta.xml
<CustomField>
    <fullName>Date_retour__c</fullName>
    <description>Date de retour de l&apos;emprunt actuel, si emprunt il y a.</description>
    <label>Date de retour</label>
    <type>Date</type>
</CustomField>