hubSide/force-app/main/default/objects/Stock_produit__c/fields/Date_retrait_souhaitee__c.field-meta.xml
<CustomField>
    <fullName>Date_retrait_souhaitee__c</fullName>
    <description>Date de retrait souhaitée pour la réservation.</description>
    <label>Date de retrait souhaitée</label>
    <type>Date</type>
</CustomField>