hubSide/force-app/main/default/objects/Stock_produit__c/fields/Date_sortie__c.field-meta.xml
<CustomField>
    <fullName>Date_sortie__c</fullName>
    <label>Date sortie</label>
    <type>Date</type>
</CustomField>