hubSide/force-app/main/default/objects/Stock_produit__c/fields/Emprunt_actuel__c.field-meta.xml
<CustomField>
    <fullName>Emprunt_actuel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Emprunt actuel</label>
    <referenceTo>Emprunt__c</referenceTo>
    <relationshipName>Stock_produits</relationshipName>
    <type>Lookup</type>
</CustomField>