hubSide/force-app/main/default/objects/Stock_produit__c/fields/Etat__c.field-meta.xml
<CustomField>
    <fullName>Etat__c</fullName>
    <label>Etat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neuf</fullName>
                <default>true</default>
                <label>Neuf</label>
            </value>
            <value>
                <fullName>Bon état</fullName>
            </value>
            <value>
                <fullName>Rayé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>