hubSide/force-app/main/default/objects/Stock_produit__c/fields/Gamme_produit__c.field-meta.xml
<CustomField>
    <fullName>Gamme_produit__c</fullName>
    <formula>Produit__r.Gamme_produit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gamme produit</label>
    <type>Text</type>
</CustomField>