hubSide/force-app/main/default/objects/Stock_produit__c/fields/Motif__c.field-meta.xml
<CustomField>
    <fullName>Motif__c</fullName>
    <label>Motif d&apos;entrée</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stock SFAM</fullName>
            </value>
            <value>
                <fullName>Stock magasin</fullName>
            </value>
            <value>
                <fullName>Transfer SFAM</fullName>
                <isActive>false</isActive>
                <label>Transfer SFAM</label>
            </value>
            <value>
                <fullName>Transfer enseigne</fullName>
                <isActive>false</isActive>
                <label>Transfer enseigne</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>