hubSide/force-app/main/default/objects/Stock_produit__c/fields/Numero_serie__c.field-meta.xml
<CustomField>
    <fullName>Numero_serie__c</fullName>
    <label>Numero de serie</label>
    <length>100</length>
    <type>Text</type>
</CustomField>