hubSide/force-app/main/default/objects/Stock_produit__c/fields/Numero_serie_genere__c.field-meta.xml
<CustomField>
    <fullName>Numero_serie_genere__c</fullName>
    <description>Dans le cas où le produit n&apos;a pas de numéro de série, crée un numéro de remplacement</description>
    <displayFormat>SER-{0000000}</displayFormat>
    <label>Numero de série généré</label>
    <type>AutoNumber</type>
</CustomField>