hubSide/force-app/main/default/objects/Stock_produit__c/fields/Observation__c.field-meta.xml
<CustomField>
    <fullName>Observation__c</fullName>
    <description>Observation sur l&apos;état de l&apos;objet en stock</description>
    <label>Observation</label>
    <type>TextArea</type>
</CustomField>