hubSide/force-app/main/default/objects/Stock_produit__c/fields/PartnerVoucher__c.field-meta.xml
<CustomField>
    <fullName>PartnerVoucher__c</fullName>
    <description>True if the related product is a partner vouher (SFAMI-2160)</description>
    <formula>Produit__r.PartnerVoucher__c</formula>
    <label>PartnerVoucher</label>
    <type>Checkbox</type>
</CustomField>