hubSide/force-app/main/default/objects/Stock_produit__c/fields/Prochaine_reservation__c.field-meta.xml
<CustomField>
    <fullName>Prochaine_reservation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pointe vers la plus proche réservation à venir.</description>
    <label>Prochaine réservation</label>
    <referenceTo>Reservation__c</referenceTo>
    <relationshipLabel>Stocks magasin</relationshipLabel>
    <relationshipName>Stocks_magasin</relationshipName>
    <type>Lookup</type>
</CustomField>