hubSide/force-app/main/default/objects/Stock_produit__c/fields/Proprietaire_Stock__c.field-meta.xml
<CustomField>
    <fullName>Proprietaire_Stock__c</fullName>
    <label>Proprietaire Stock</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Proprietaire_Stock</valueSetName>
    </valueSet>
</CustomField>