hubSide/force-app/main/default/objects/Stock_produit__c/fields/Responsable_stock__c.field-meta.xml
<CustomField>
    <fullName>Responsable_stock__c</fullName>
    <formula>CONTAINS($User.Distributeur_de_reference__c, Code_distributeur_stock__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responsable du stock ?</label>
    <type>Checkbox</type>
</CustomField>