hubSide/force-app/main/default/objects/Stock_produit__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En stock</fullName>
                <default>true</default>
                <label>En stock</label>
            </value>
            <value>
                <fullName>Sortie client</fullName>
            </value>
            <value>
                <fullName>A transférer</fullName>
            </value>
            <value>
                <fullName>Destocke</fullName>
                <label>Déstocké</label>
            </value>
            <value>
                <fullName>Réservé</fullName>
            </value>
            <value>
                <fullName>Recyclé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>