hubSide/force-app/main/default/objects/Stock_produit__c/fields/Stock_number__c.field-meta.xml
<CustomField>
    <fullName>Stock_number__c</fullName>
    <displayFormat>ST{000000}</displayFormat>
    <label>Stock number</label>
    <type>AutoNumber</type>
</CustomField>