hubSide/force-app/main/default/objects/Stock_produit__c/recordTypes/Nouveau_stock_produit.recordType-meta.xml
<RecordType>
    <fullName>Nouveau_stock_produit</fullName>
    <active>true</active>
    <description>Record type pour la création de l&apos;objet Stock produit</description>
    <label>Nouveau stock produit</label>
</RecordType>