hubSide/force-app/main/default/objects/Stock_produit__c/recordTypes/Stock_non_empruntable.recordType-meta.xml
<RecordType>
    <fullName>Stock_non_empruntable</fullName>
    <active>true</active>
    <description>Stock déjà emprunté,</description>
    <label>Stock non empruntable</label>
</RecordType>