hubSide/force-app/main/default/objects/Stock_produit__c/recordTypes/Stock_produit.recordType-meta.xml
<RecordType>
    <fullName>Stock_produit</fullName>
    <active>true</active>
    <description>Record type pour l&apos;objet Stock produit une fois créé</description>
    <label>Stock produit</label>
</RecordType>