hubSide/force-app/main/default/objects/Stock_produit__c/validationRules/Le_champ_produit_ne_peut_etre_vide.validationRule-meta.xml
<ValidationRule>
    <fullName>Le_champ_produit_ne_peut_etre_vide</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Produit__c )</errorConditionFormula>
    <errorDisplayField>Produit__c</errorDisplayField>
    <errorMessage>Merci de renseigner le produit concerné</errorMessage>
</ValidationRule>