hubSide/force-app/main/default/objects/Stock_produit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Produit__c</columns>
    <columns>Statut__c</columns>
    <columns>Code_distributeur_stock__c</columns>
    <columns>Date_entree__c</columns>
    <columns>Date_sortie__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>