hubSide/force-app/main/default/objects/Stock_produit__c/listViews/Stock_de_mon_magasin.listView-meta.xml
<ListView>
    <fullName>Stock_de_mon_magasin</fullName>
    <columns>NAME</columns>
    <columns>Produit__c</columns>
    <columns>Statut__c</columns>
    <columns>Code_distributeur_stock__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Responsable_stock__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Stock de mon magasin</label>
</ListView>